--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8) 
 project(Scanline)
-set(CMAKE_CXX_COMPILER "g++-9")
-set(CMAKE_C_COMPILER "gcc-9")
-set(CMAKE_CXX_FLAGS "-std=c++17")
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_CXX_COMPILER "g++-7")
+set(CMAKE_C_COMPILER "gcc-7")
+set(CMAKE_CXX_FLAGS "-std=c++17 -O2")
+# set(CMAKE_BUILD_TYPE "Debug")
 find_package(Eigen3 REQUIRED) 
 find_package(OpenCV 3 REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
