Add support for parsing configure file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -O2")
 # set(CMAKE_BUILD_TYPE "Debug")
 find_package(Eigen3 REQUIRED) 
 find_package(OpenCV 3 REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
+find_package(yaml-cpp REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS} ${YAML_CPP_INCLUDE_DIR})
 include_directories("${CMAKE_SOURCE_DIR}/include")
+
 add_executable(scanline src/main.cc)
-target_link_libraries(scanline ${OpenCV_LIBRARIES})
+target_link_libraries(scanline ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES})
