--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8) 
 project(Scanline)
-set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -pg")
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_CXX_FLAGS "-std=c++17 -O0 -pg")
+set(CMAKE_BUILD_TYPE "Debug")
 find_package(Eigen3 REQUIRED) 
 find_package(OpenCV 3 REQUIRED)
 find_package(yaml-cpp REQUIRED)
