--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,4 @@
-object_path: "/home/taokun/Work/Homework/scanline/model/rose_vase.obj"
+object_path: "../model/venus.obj"
 width: 800
 height: 600
-rotation_vector: [1, 5, 0] #before
+rotation_vector: [3.14, 0, 0] #original state should stay [3.14, 0, 0]
