--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(Scanline)
 # set(CMAKE_CXX_FLAGS "-std=c++17 -pg")
 # set(CMAKE_BUILD_TYPE "Debug")
-set(CMAKE_CXX_FLAGS "-std=c++17 -O3")
+set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -march=native -fopenmp")
 set(CMAKE_BUILD_TYPE "Release")
 find_package(Eigen3 REQUIRED) 
 find_package(OpenCV 3 REQUIRED)
