--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,4 @@
-object_path: "/home/taokun/Work/Homework/scanline/model/bunny.obj"
+object_path: "../model/bunny.obj"
 width: 800
 height: 600
 render_mode: 0
